加入光神的模块

--- a/Pytest/Pytest.csproj
+++ b/Pytest/Pytest.csproj
@@ -77,6 +77,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Four.py" />
+    <Content Include="Interpreter.py" />
+    <Content Include="Symbol.py" />
     <Content Include="test.py" />
   </ItemGroup>
   <ItemGroup>
