--- a/littlemm_IDE/littlemm_IDE.csproj
+++ b/littlemm_IDE/littlemm_IDE.csproj
@@ -96,5 +96,11 @@
   <ItemGroup>
     <Folder Include="source\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AurelienRibon.Ui.SyntaxHighlightBox\AurelienRibon.Ui.SyntaxHighlightBox.csproj">
+      <Project>{10a9ecd3-ae1e-494d-9a27-8a32dd581759}</Project>
+      <Name>AurelienRibon.Ui.SyntaxHighlightBox</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
